--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
-    /></noscript>
+    /></noscript> 
   </head>
   <body class="is-preload">
     <!-- Page Wrapper -->
     <div id="page-wrapper">
       <!-- Header -->
       <header id="header" class="alt">
-        <h1><a href="index.html">My Portfolio</a></h1>
+        <h1><a href="index.html">My Portfolio!</a></h1>
         <nav>
           <a href="#menu">Menu</a>
         </nav>
