--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="page-wrapper">
       <!-- Header -->
       <header id="header" class="alt">
-        <h1><a href="index.html">My Portfolio!</a></h1>
+        <h1><a href="index.html">My Portfolio</a></h1>
         <nav>
           <a href="#menu">Menu</a>
         </nav>
