--- a/todo-app.html
+++ b/todo-app.html
@@ -54,8 +54,8 @@
                 style="
                   border: 5px solid mediumpurple;
                   border-radius: 10%;
-                  width: auto;
-                  height: auto;
+                  width: 100%;
+                  height: 100%;
                 "
                 alt=""
             /></a>
