--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
 
           <h2>MY NAME IS NIAB</h2>
-          <p>Welcome to my Portfolio Website</p>
+          <p>Welcome to my Portfolio Website ok</p>
           <a href="#one" class="special">See my project</a>
         </div>
       </section>
