add frameworks images

--- a/chat-app.html
+++ b/chat-app.html
@@ -93,10 +93,28 @@
             <h3 class="major">Implementation Tools</h3>
             <p>
               Cras mattis ante fermentum, malesuada neque vitae, eleifend erat.
-              Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis
-              egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus
-              in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.
+              Phasellus non pulvinar erat.
             </p>
+
+            <h4>Tools and Frameworks</h4>
+            <ul class="alt">
+              <li>
+                Firebase Cloud Firestore <br /><br />
+                <img
+                  src="images/Cloudstore.png"
+                  alt=""
+                  style="width: 10%; height: 10%"
+                />
+              </li>
+              <li>
+                UIKit <br /><br />
+                <img
+                  src="images/uikit.jpeg"
+                  alt=""
+                  style="width: 10%; height: 10%"
+                />
+              </li>
+            </ul>
 
             <section class="features">
               <article>
