--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="inner">
           <div class="logo">
             <span class="icon">
-              <img src="images/cat.jpg" alt="" />
+              <img src="images/cat.jpg" alt="" style="border-radius: 50%;" />
             </span>
           </div>
 
