resize image rem

--- a/chat-app.html
+++ b/chat-app.html
@@ -103,7 +103,7 @@
                 <img
                   src="images/Cloudstore.png"
                   alt=""
-                  style="width: 10%; height: 10%"
+                  style="width: 5rem; height: 5rem"
                 />
               </li>
               <li>
@@ -111,7 +111,7 @@
                 <img
                   src="images/uikit.jpeg"
                   alt=""
-                  style="width: 10%; height: 10%"
+                  style="width: 5rem; height: 5rem"
                 />
               </li>
             </ul>
