--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a href="chat-app.html" class="image"
               ><img
                 src="images/chat-app.png"
-                style="border: 5px solid palevioletred"
+                style="border: 5px solid palevioletred;"
                 alt=""
             /></a>
             <div class="content">
