--- a/ar-app.html
+++ b/ar-app.html
@@ -105,7 +105,7 @@
                 <img
                   src="images/ARKit.png"
                   alt=""
-                  style="width: 10%; height: 10%"
+                  style="width: 5rem; height: 5rem"
                 />
               </li>
               <li>
@@ -113,7 +113,7 @@
                 <img
                   src="images/uikit.jpeg"
                   alt=""
-                  style="width: 10%; height: 10%"
+                  style="width: 5rem; height: 5rem"
                 />
               </li>
             </ul>
