--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
 
 <!--             <li class="icon solid fa-phone">(000) 000-0000</li> -->
             <li class="icon solid fa-envelope">
-              <a href="#">information@untitled.tld</a>
+              <a href="#">niabwork2@gmail.com</a>
 			</li>
 
-            <li class="icon brands fa-twitter">
-              <a href="#">twitter.com/untitled-tld</a>
+            <li class="icon brands fa-github">
+              <a href="https://github.com/niabwork2">niabwork2</a>
             </li>
             <li class="icon brands fa-facebook-f">
               <a href="#">facebook.com/untitled-tld</a>
