add iphone12 mockups

--- a/chat-app.html
+++ b/chat-app.html
@@ -48,6 +48,7 @@
           <div class="inner">
             <h2>Chat App</h2>
             <p>The best Chat app on the planet</p>
+
             <a href="#" class="image"
               ><img
                 src="images/chat-app.png"
@@ -90,6 +91,38 @@
               Mauris felis nec felis elementum varius.
             </p>
 
+            <a class="image"
+              ><img
+                src="images/mechat-image/main-screen.png"
+                style="border-radius: 0%; width: 20rem; height: auto"
+            /></a>
+
+            <a class="image"
+              ><img
+                src="images/mechat-image/login-screen.png"
+                style="border-radius: 0%; width: 20rem; height: auto"
+            /></a>
+
+            <a class="image"
+              ><img
+                src="images/mechat-image/register-screen.png"
+                style="border-radius: 0%; width: 20rem; height: auto"
+            /></a>
+
+            <a class="image"
+              ><img
+                src="images/mechat-image/chat-screen-one.png"
+                style="border-radius: 0%; width: 20rem; height: auto"
+            /></a>
+
+            <a class="image"
+              ><img
+                src="images/mechat-image/chat-screen-two.png"
+                style="border-radius: 0%; width: 20rem; height: auto"
+            /></a>
+
+            <br /><br /><br /><br />
+
             <h3 class="major">Implementation Tools</h3>
             <p>
               Cras mattis ante fermentum, malesuada neque vitae, eleifend erat.
@@ -103,7 +136,7 @@
                 <img
                   src="images/Cloudstore.png"
                   alt=""
-                  style="width: 5rem; height: 5rem"
+                  style="width: 5rem; height: auto"
                 />
               </li>
               <li>
@@ -111,7 +144,7 @@
                 <img
                   src="images/uikit.jpeg"
                   alt=""
-                  style="width: 5rem; height: 5rem"
+                  style="width: 5rem; height: auto"
                 />
               </li>
             </ul>
@@ -121,23 +154,37 @@
                 <a href="#" class="image"
                   ><img src="images/pic04.jpg" alt=""
                 /></a>
-                <h3 class="major">Sed feugiat lorem</h3>
+                <h3 class="major">mechat in action</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id
-                  nulla dignissim dapibus ultrices.
+                  Let's see MeChat live demo. A quick and easy guide tour to all
+                  of it's basic function and features. Click at the link below
+                  to download MeChat now !
                 </p>
-                <a href="#" class="special">Learn more</a>
+                <a href="https://www.apple.com/app-store/" class="nolink"
+                  ><img
+                    src="images/download-appstore.png"
+                    style="width: 40%; height: auto"
+                /></a>
+
+                <br /><br />
+                <a href="#" class="special">see video </a>
               </article>
+
               <article>
                 <a href="#" class="image"
                   ><img src="images/pic05.jpg" alt=""
                 /></a>
-                <h3 class="major">Nisl placerat</h3>
+                <h3 class="major">let's contribute</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id
-                  nulla dignissim dapibus ultrices.
+                  Let's contribute to MeChat project. It is a great way of
+                  developing quality apps by working together with other
+                  developers. Let's create code that benefits the community.
                 </p>
-                <a href="#" class="special">Learn more</a>
+                <a href="https://github.com/niabwork2/MeChat"
+                  ><ol class="icon brands fa-github">
+                    <b>&nbsp niabwork2/MeChat</b>
+                  </ol></a
+                >
               </article>
             </section>
           </div>
@@ -145,60 +192,6 @@
       </section>
 
       <!-- Footer -->
-      <section id="footer">
-        <div class="inner">
-          <h2 class="major">Get in touch</h2>
-          <p>
-            Cras mattis ante fermentum, malesuada neque vitae, eleifend erat.
-            Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis
-            egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus
-            in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.
-          </p>
-          <!-- <form method="post" action="#">
-      <div class="fields">
-        <div class="field">
-          <label for="name">Name</label>
-          <input type="text" name="name" id="name" />
-        </div>
-        <div class="field">
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email" />
-        </div>
-        <div class="field">
-          <label for="message">Message</label>
-          <textarea name="message" id="message" rows="4"></textarea>
-        </div>
-      </div>
-      <ul class="actions">
-        <li><input type="submit" value="Send Message" /></li>
-      </ul>
-    </form> -->
-
-          <ul class="contact">
-            <!--             <li class="icon solid fa-home">
-        Untitled Inc<br />
-        1234 Somewhere Road Suite #2894<br />
-        Nashville, TN 00000-0000
-      </li> -->
-
-            <!--             <li class="icon solid fa-phone">(000) 000-0000</li> -->
-            <li class="icon solid fa-envelope">
-              <a href="#">information@untitled.tld</a>
-            </li>
-
-            <li class="icon brands fa-twitter">
-              <a href="#">twitter.com/untitled-tld</a>
-            </li>
-            <li class="icon brands fa-facebook-f">
-              <a href="#">facebook.com/untitled-tld</a>
-            </li>
-            <li class="icon brands fa-instagram">
-              <a href="#">instagram.com/untitled-tld</a>
-            </li>
-          </ul>
-          <ul class="copyright"></ul>
-        </div>
-      </section>
     </div>
 
     <!-- Scripts -->
