--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </span>
           </div>
 
-          <h2>MY NAME IS NIAB hey</h2>
+          <h2>MY NAME IS NIAB</h2>
           <p>Welcome to my Portfolio Website</p>
           <a href="#one" class="special">See my project</a>
         </div>
