add mechat video 3d

--- a/ar-app.html
+++ b/ar-app.html
@@ -34,7 +34,7 @@
           <h2>Menu</h2>
           <ul class="links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="chat-app.html">Chat App</a></li>
+            <li><a href="mechat-main.html">Chat App</a></li>
             <li><a href="todo-app.html">Todo App</a></li>
             <li><a href="ar-app.html">AR App</a></li>
           </ul>
