--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="images/cat.jpg"
+    />
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript> 
@@ -33,7 +38,7 @@
         <div class="inner">
           <h2>Menu</h2>
           <ul class="links">
-            <li><a href="chat-app.html">Chat App</a></li>
+            <li><a href="mechat-main.html">Chat App</a></li>
             <li><a href="todo-app.html">Todo App</a></li>
 			<li><a href="ar-app.html">AR App</a></li>
           </ul>
@@ -61,16 +66,16 @@
         <!-- One -->
         <section id="one" class="wrapper spotlight style1">
           <div class="inner">
-            <a href="chat-app.html" class="image"
+            <a href="mechat-main.html" class="image"
               ><img
-                src="images/chat-app.png"
+                src="images/mechat-image/mechat-circle-crop.png"
                 style="border: 5px solid palevioletred;"
                 alt=""
             /></a>
             <div class="content">
-              <h2 class="major">Chat App</h2>
+              <h2 class="major">MeChat</h2>
               <p>The best chat app on the planet</p>
-              <a href="chat-app.html" class="special">Learn more</a>
+              <a href="mechat-main.html" class="special">Learn more</a>
             </div>
           </div>
         </section>
