--- a/mechat-main.html
+++ b/mechat-main.html
@@ -67,6 +67,7 @@
               <video
                 src="images/mechat-image/mechat-header-black.mp4"
                 autoplay
+                controls
                 style="width: 100%; height: 100%; border-radius: 30px"
               ></video>
             </a>
