--- a/mechat-main.html
+++ b/mechat-main.html
@@ -59,17 +59,17 @@
             <p>The best Chat app on the planet</p>
 
             <a href="https://www.apple.com/app-store/" class="image">
-              <!-- <img
-                src="images/mechat-image/mechat-download.png"
-                style="width: 100%; height: 100%"
+              <img
+                src="images/mechat-image/mechat-header-black-1080p.gif"
+                style="width: 100%; height: 100%; border-radius: 30px"
                 alt=""
-              /> -->
-              <video
+              />
+              <!-- <video
                 src="images/mechat-image/mechat-header-black.mp4"
                 autoplay
                 controls
                 style="width: 100%; height: 100%; border-radius: 30px"
-              ></video>
+              ></video> -->
             </a>
           </div>
         </header>
