change whole look and each page logo

--- a/aroundus-main.html
+++ b/aroundus-main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MeChat</title>
+    <title>ARoundUs</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -11,7 +11,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="images/mechat-image/mechat-logo.png"
+      href="images/aroundus-image/aroundus-logo.png"
     />
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
@@ -47,14 +47,18 @@
         <header>
           <div class="inner">
             <h2>
-              MeChat
+              ARoundUs
               <img
-                src="images/mechat-image/mechat-logo.png"
-                style="width: 10%; border-radius: 10px; background-color: white"
+                src="images/aroundus-image/aroundus-logo.png"
+                style="
+                  width: 10%;
+                  border-radius: 10px;
+                  background-color: rgb(23, 23, 56);
+                "
               />
             </h2>
 
-            <p>The best Chat app on the planet</p>
+            <p>The best ar app on the planet</p>
 
             <a href="https://www.apple.com/app-store/" class="image">
               <img
@@ -75,7 +79,7 @@
         <!-- Content -->
         <div class="wrapper">
           <div class="inner">
-            <h3 class="major">Introducing MeChat</h3>
+            <h3 class="major">Introducing ARoundUs</h3>
             <p>
               Morbi mattis mi consectetur tortor elementum, varius pellentesque
               velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac
@@ -160,16 +164,16 @@
 
             <section class="features">
               <article>
-                <a href="mechat-sub.html" class="image"
+                <a href="aroundus-sub.html" class="image"
                   ><img
                     src="images/mechat-image/mechat-download-black.png"
                     alt=""
                 /></a>
-                <h3 class="major">mechat in action</h3>
+                <h3 class="major">ARoundUs in action</h3>
                 <p>
-                  Let's see MeChat live demo. A quick and easy guide tour to all
-                  of it's basic function and features. Click at the link below
-                  to download MeChat now !
+                  Let's see ARoundUs live demo. A quick and easy guide tour to
+                  all of it's basic function and features. Click at the link
+                  below to download ARoundUs now !
                 </p>
                 <a href="https://www.apple.com/app-store/" class="nolink"
                   ><img
@@ -178,7 +182,7 @@
                 /></a>
 
                 <br /><br />
-                <a href="mechat-sub.html" class="special">see video </a>
+                <a href="aroundus-sub.html" class="special">see video </a>
               </article>
 
               <article>
@@ -187,13 +191,13 @@
                 /></a>
                 <h3 class="major">let's contribute</h3>
                 <p>
-                  Let's contribute to MeChat project. It is a great way of
+                  Let's contribute to ARoundUs project. It is a great way of
                   developing quality apps by working together with other
                   developers. Let's create code that benefits the community.
                 </p>
                 <a href="https://github.com/niabwork2/MeChat"
                   ><ol class="icon brands fa-github">
-                    <b>&nbsp niabwork2/MeChat</b>
+                    <b>&nbsp niabwork2/ARoundUs</b>
                   </ol></a
                 >
               </article>
