--- a/aroundus-sub.html
+++ b/aroundus-sub.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MeChat</title>
+    <title>ARoundUs</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -11,7 +11,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="images/mechat-image/mechat-logo.png"
+      href="images/aroundus-image/aroundus-logo.png"
     />
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
@@ -47,14 +47,18 @@
         <header>
           <div class="inner">
             <h2>
-              MeChat IN ACTION
+              ARoundUs IN ACTION
               <img
-                src="images/mechat-image/mechat-logo.png"
-                style="width: 10%; border-radius: 10px; background-color: white"
+                src="images/aroundus-image/aroundus-logo.png"
+                style="
+                  width: 10%;
+                  border-radius: 10px;
+                  background-color: rgb(23, 23, 56);
+                "
               />
             </h2>
 
-            <p>The best Chat app on the planet</p>
+            <p>The best AR app on the planet</p>
 
             <a>
               <!-- <img
