--- a/todone-sub.html
+++ b/todone-sub.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MeChat</title>
+    <title>ToDone</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -11,7 +11,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="images/mechat-image/mechat-logo.png"
+      href="images/todone-image/todone-logo.png"
     />
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
@@ -47,14 +47,14 @@
         <header>
           <div class="inner">
             <h2>
-              MeChat IN ACTION
+              ToDone IN ACTION
               <img
-                src="images/mechat-image/mechat-logo.png"
+                src="images/todone-image/todone-logo.png"
                 style="width: 10%; border-radius: 10px; background-color: white"
               />
             </h2>
 
-            <p>The best Chat app on the planet</p>
+            <p>The best Todo app on the planet</p>
 
             <a>
               <!-- <img
