--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <div class="inner">
           <h2>Menu</h2>
           <ul class="links">
-            <li><a href="mechat-main.html">Chat App</a></li>
-            <li><a href="todo-app.html">Todo App</a></li>
-			<li><a href="ar-app.html">AR App</a></li>
+            <li><a href="mechat-main.html">MeChat</a></li>
+            <li><a href="todone-main.html">Todone</a></li>
+			<li><a href="aroundus-main.html">ARoundUs</a></li>
           </ul>
           <a href="#" class="close">Close</a>
         </div>
@@ -66,10 +66,27 @@
         <!-- One -->
         <section id="one" class="wrapper spotlight style1">
           <div class="inner">
+            <a href="aroundus-main.html" class="image"
+              ><img
+                src="images/aroundus-image/ar-app.png"
+                style="border: 5px solid mediumseagreen;"
+                alt=""
+            /></a>
+            <div class="content">
+              <h2 class="major">ARoundUs</h2>
+              <p>The best ar app on the planet</p>
+              <a href="aroundus-main.html" class="special">Learn more</a>
+            </div>
+          </div>
+        </section>
+
+        <!-- Two -->
+        <section id="two" class="wrapper alt spotlight style2">
+          <div class="inner">
             <a href="mechat-main.html" class="image"
               ><img
                 src="images/mechat-image/mechat-circle-crop.png"
-                style="border: 5px solid palevioletred;"
+                style="border: 5px solid palevioletred"
                 alt=""
             /></a>
             <div class="content">
@@ -80,36 +97,19 @@
           </div>
         </section>
 
-        <!-- Two -->
-        <section id="two" class="wrapper alt spotlight style2">
+        <!-- Three -->
+        <section id="three" class="wrapper spotlight style3">
           <div class="inner">
-            <a href="todo-app.html" class="image"
+            <a href="todone-main.html" class="image"
               ><img
-                src="images/todo-app.png"
+                src="images/todone-image/todo-app.png"
                 style="border: 5px solid mediumpurple"
                 alt=""
             /></a>
             <div class="content">
-              <h2 class="major">Todo app</h2>
+              <h2 class="major">ToDone</h2>
               <p>The best todo app on the planet</p>
-              <a href="todo-app.html" class="special">Learn more</a>
-            </div>
-          </div>
-        </section>
-
-        <!-- Three -->
-        <section id="three" class="wrapper spotlight style3">
-          <div class="inner">
-            <a href="ar-app.html" class="image"
-              ><img
-                src="images/ar-app.png"
-                style="border: 5px solid mediumseagreen"
-                alt=""
-            /></a>
-            <div class="content">
-              <h2 class="major">AR app</h2>
-              <p>The best ar app on the planet</p>
-              <a href="ar-app.html" class="special">Learn more</a>
+              <a href="ToDone-main.html" class="special">Learn more</a>
             </div>
           </div>
         </section>
