--- a/todone-main.html
+++ b/todone-main.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
   <head>
-    <title>Todo App</title>
+    <title>ToDone</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="images/todone-image/todone-logo.png"
+    />
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript>
@@ -34,9 +34,9 @@
           <h2>Menu</h2>
           <ul class="links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="mechat-main.html">Chat App</a></li>
-            <li><a href="todo-app.html">Todo App</a></li>
-            <li><a href="ar-app.html">AR App</a></li>
+            <li><a href="mechat-main.html">MeChat</a></li>
+            <li><a href="todone-main.html">Todone</a></li>
+            <li><a href="aroundus-main.html">ARoundUs</a></li>
           </ul>
           <a href="#" class="close">Close</a>
         </div>
@@ -46,26 +46,36 @@
       <section id="wrapper">
         <header>
           <div class="inner">
-            <h2>Todo App</h2>
+            <h2>
+              ToDone
+              <img
+                src="images/todone-image/todone-logo.png"
+                style="width: 10%; border-radius: 10px; background-color: white"
+              />
+            </h2>
+
             <p>The best Todo app on the planet</p>
-            <a href="#" class="image"
-              ><img
-                src="images/todo-app.png"
-                style="
-                  border: 5px solid mediumpurple;
-                  border-radius: 10%;
-                  width: 100%;
-                  height: 100%;
-                "
+
+            <a href="https://www.apple.com/app-store/" class="image">
+              <img
+                src="images/mechat-image/mechat-header-black.gif"
+                style="width: 100%; height: 100%; border-radius: 30px"
                 alt=""
-            /></a>
+              />
+              <!-- <video
+                src="images/mechat-image/mechat-header-black.mp4"
+                autoplay
+                controls
+                style="width: 100%; height: 100%; border-radius: 30px"
+              ></video> -->
+            </a>
           </div>
         </header>
 
         <!-- Content -->
         <div class="wrapper">
           <div class="inner">
-            <h3 class="major">What is Todo app?</h3>
+            <h3 class="major">Introducing ToDone</h3>
             <p>
               Morbi mattis mi consectetur tortor elementum, varius pellentesque
               velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac
@@ -90,22 +100,52 @@
               Mauris felis nec felis elementum varius.
             </p>
 
+            <a class="image"
+              ><img
+                src="images/mechat-image/main-screen.png"
+                style="border-radius: 0%; width: 20rem; height: auto"
+            /></a>
+
+            <a class="image"
+              ><img
+                src="images/mechat-image/login-screen.png"
+                style="border-radius: 0%; width: 20rem; height: auto"
+            /></a>
+
+            <a class="image"
+              ><img
+                src="images/mechat-image/register-screen.png"
+                style="border-radius: 0%; width: 20rem; height: auto"
+            /></a>
+
+            <a class="image"
+              ><img
+                src="images/mechat-image/chat-screen-one.png"
+                style="border-radius: 0%; width: 20rem; height: auto"
+            /></a>
+
+            <a class="image"
+              ><img
+                src="images/mechat-image/chat-screen-two.png"
+                style="border-radius: 0%; width: 20rem; height: auto"
+            /></a>
+
+            <br /><br /><br /><br />
+
             <h3 class="major">Implementation Tools</h3>
             <p>
               Cras mattis ante fermentum, malesuada neque vitae, eleifend erat.
-              Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis
-              egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus
-              in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.
+              Phasellus non pulvinar erat.
             </p>
 
             <h4>Tools and Frameworks</h4>
             <ul class="alt">
               <li>
-                Coredata <br /><br />
+                Firebase Cloud Firestore <br /><br />
                 <img
-                  src="images/coredata.png"
+                  src="images/Cloudstore.png"
                   alt=""
-                  style="width: 5rem; height: 5rem"
+                  style="width: 5rem; height: auto"
                 />
               </li>
               <li>
@@ -113,33 +153,49 @@
                 <img
                   src="images/uikit.jpeg"
                   alt=""
-                  style="width: 5rem; height: 5rem"
+                  style="width: 5rem; height: auto"
                 />
               </li>
             </ul>
 
             <section class="features">
               <article>
-                <a href="#" class="image"
-                  ><img src="images/pic04.jpg" alt=""
+                <a href="todone-sub.html" class="image"
+                  ><img
+                    src="images/mechat-image/mechat-download-black.png"
+                    alt=""
                 /></a>
-                <h3 class="major">Sed feugiat lorem</h3>
+                <h3 class="major">ToDone in action</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id
-                  nulla dignissim dapibus ultrices.
+                  Let's see ToDone live demo. A quick and easy guide tour to all
+                  of it's basic function and features. Click at the link below
+                  to download ToDone now !
                 </p>
-                <a href="#" class="special">Learn more</a>
+                <a href="https://www.apple.com/app-store/" class="nolink"
+                  ><img
+                    src="images/download-appstore.png"
+                    style="width: 40%; height: auto"
+                /></a>
+
+                <br /><br />
+                <a href="todone-sub.html" class="special">see video </a>
               </article>
+
               <article>
-                <a href="#" class="image"
-                  ><img src="images/pic05.jpg" alt=""
+                <a href="https://github.com/niabwork2/MeChat" class="image"
+                  ><img src="images/mechat-image/mechat-banner.png" alt=""
                 /></a>
-                <h3 class="major">Nisl placerat</h3>
+                <h3 class="major">let's contribute</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id
-                  nulla dignissim dapibus ultrices.
+                  Let's contribute to MeChat project. It is a great way of
+                  developing quality apps by working together with other
+                  developers. Let's create code that benefits the community.
                 </p>
-                <a href="#" class="special">Learn more</a>
+                <a href="https://github.com/niabwork2/MeChat"
+                  ><ol class="icon brands fa-github">
+                    <b>&nbsp niabwork2/ToDone</b>
+                  </ol></a
+                >
               </article>
             </section>
           </div>
@@ -147,60 +203,6 @@
       </section>
 
       <!-- Footer -->
-      <section id="footer">
-        <div class="inner">
-          <h2 class="major">Get in touch</h2>
-          <p>
-            Cras mattis ante fermentum, malesuada neque vitae, eleifend erat.
-            Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis
-            egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus
-            in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.
-          </p>
-          <!-- <form method="post" action="#">
-      <div class="fields">
-        <div class="field">
-          <label for="name">Name</label>
-          <input type="text" name="name" id="name" />
-        </div>
-        <div class="field">
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email" />
-        </div>
-        <div class="field">
-          <label for="message">Message</label>
-          <textarea name="message" id="message" rows="4"></textarea>
-        </div>
-      </div>
-      <ul class="actions">
-        <li><input type="submit" value="Send Message" /></li>
-      </ul>
-    </form> -->
-
-          <ul class="contact">
-            <!--             <li class="icon solid fa-home">
-        Untitled Inc<br />
-        1234 Somewhere Road Suite #2894<br />
-        Nashville, TN 00000-0000
-      </li> -->
-
-            <!--             <li class="icon solid fa-phone">(000) 000-0000</li> -->
-            <li class="icon solid fa-envelope">
-              <a href="#">information@untitled.tld</a>
-            </li>
-
-            <li class="icon brands fa-twitter">
-              <a href="#">twitter.com/untitled-tld</a>
-            </li>
-            <li class="icon brands fa-facebook-f">
-              <a href="#">facebook.com/untitled-tld</a>
-            </li>
-            <li class="icon brands fa-instagram">
-              <a href="#">instagram.com/untitled-tld</a>
-            </li>
-          </ul>
-          <ul class="copyright"></ul>
-        </div>
-      </section>
     </div>
 
     <!-- Scripts -->
