all page have same template

--- a/aroundus-main.html
+++ b/aroundus-main.html
@@ -34,9 +34,9 @@
           <h2>Menu</h2>
           <ul class="links">
             <li><a href="index.html">Home</a></li>
+            <li><a href="aroundus-main.html">ARoundUs</a></li>
             <li><a href="mechat-main.html">MeChat</a></li>
             <li><a href="todone-main.html">Todone</a></li>
-            <li><a href="aroundus-main.html">ARoundUs</a></li>
           </ul>
           <a href="#" class="close">Close</a>
         </div>
@@ -79,7 +79,7 @@
         <!-- Content -->
         <div class="wrapper">
           <div class="inner">
-            <h3 class="major">Introducing ARoundUs</h3>
+            <h2 class="major">Introducing ARoundUs</h2>
             <p>
               Morbi mattis mi consectetur tortor elementum, varius pellentesque
               velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac
@@ -187,7 +187,10 @@
 
               <article>
                 <a href="https://github.com/niabwork2/MeChat" class="image"
-                  ><img src="images/mechat-image/mechat-banner.png" alt=""
+                  ><img
+                    src="images/mechat-image/mechat-banner.png"
+                    alt=""
+                    style="background-color: #333333"
                 /></a>
                 <h3 class="major">let's contribute</h3>
                 <p>
