--- a/mechat-sub.html
+++ b/mechat-sub.html
@@ -34,9 +34,9 @@
           <h2>Menu</h2>
           <ul class="links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="mechat-main.html">MeChat</a></li>
-            <li><a href="todone-main.html">ToDone</a></li>
             <li><a href="aroundus-main.html">ARoundUs</a></li>
+            <li><a href="mechat-main.html">MeChat</a></li>
+            <li><a href="todone-main.html">Todone</a></li>
           </ul>
           <a href="#" class="close">Close</a>
         </div>
