--- a/todone-main.html
+++ b/todone-main.html
@@ -34,9 +34,9 @@
           <h2>Menu</h2>
           <ul class="links">
             <li><a href="index.html">Home</a></li>
+            <li><a href="aroundus-main.html">ARoundUs</a></li>
             <li><a href="mechat-main.html">MeChat</a></li>
             <li><a href="todone-main.html">Todone</a></li>
-            <li><a href="aroundus-main.html">ARoundUs</a></li>
           </ul>
           <a href="#" class="close">Close</a>
         </div>
@@ -75,7 +75,7 @@
         <!-- Content -->
         <div class="wrapper">
           <div class="inner">
-            <h3 class="major">Introducing ToDone</h3>
+            <h2 class="major">Introducing ToDone</h2>
             <p>
               Morbi mattis mi consectetur tortor elementum, varius pellentesque
               velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac
@@ -183,11 +183,14 @@
 
               <article>
                 <a href="https://github.com/niabwork2/MeChat" class="image"
-                  ><img src="images/mechat-image/mechat-banner.png" alt=""
+                  ><img
+                    src="images/mechat-image/mechat-banner.png"
+                    alt=""
+                    style="background-color: #333333"
                 /></a>
                 <h3 class="major">let's contribute</h3>
                 <p>
-                  Let's contribute to MeChat project. It is a great way of
+                  Let's contribute to ToDone project. It is a great way of
                   developing quality apps by working together with other
                   developers. Let's create code that benefits the community.
                 </p>
