add todone main+sub and generalize all page

--- a/aroundus-main.html
+++ b/aroundus-main.html
@@ -62,10 +62,11 @@
 
             <a href="https://www.apple.com/app-store/" class="image">
               <img
-                src="images/mechat-image/mechat-header-black.gif"
+                src="images/mechat-image/mechat-header.gif"
                 style="width: 100%; height: 100%; border-radius: 30px"
                 alt=""
               />
+              <a href="aroundus-sub.html" class="special">see video </a>
               <!-- <video
                 src="images/mechat-image/mechat-header-black.mp4"
                 autoplay
@@ -106,31 +107,31 @@
 
             <a class="image"
               ><img
-                src="images/mechat-image/main-screen.png"
+                src="images/mechat-image/main-mock.png"
                 style="border-radius: 0%; width: 20rem; height: auto"
             /></a>
 
             <a class="image"
               ><img
-                src="images/mechat-image/login-screen.png"
+                src="images/mechat-image/login-mock.png"
                 style="border-radius: 0%; width: 20rem; height: auto"
             /></a>
 
             <a class="image"
               ><img
-                src="images/mechat-image/register-screen.png"
+                src="images/mechat-image/register-mock.png"
                 style="border-radius: 0%; width: 20rem; height: auto"
             /></a>
 
             <a class="image"
               ><img
-                src="images/mechat-image/chat-screen-one.png"
+                src="images/mechat-image/chat-one-mock.png"
                 style="border-radius: 0%; width: 20rem; height: auto"
             /></a>
 
             <a class="image"
               ><img
-                src="images/mechat-image/chat-screen-two.png"
+                src="images/mechat-image/chat-two-mock.png"
                 style="border-radius: 0%; width: 20rem; height: auto"
             /></a>
 
@@ -147,7 +148,7 @@
               <li>
                 Firebase Cloud Firestore <br /><br />
                 <img
-                  src="images/Cloudstore.png"
+                  src="images/cloudstore.png"
                   alt=""
                   style="width: 5rem; height: auto"
                 />
@@ -165,9 +166,7 @@
             <section class="features">
               <article>
                 <a href="aroundus-sub.html" class="image"
-                  ><img
-                    src="images/mechat-image/mechat-download-black.png"
-                    alt=""
+                  ><img src="images/mechat-image/mechat-download.png" alt=""
                 /></a>
                 <h3 class="major">ARoundUs in action</h3>
                 <p>
@@ -177,7 +176,7 @@
                 </p>
                 <a href="https://www.apple.com/app-store/" class="nolink"
                   ><img
-                    src="images/download-appstore.png"
+                    src="images/appstore-download.png"
                     style="width: 40%; height: auto"
                 /></a>
 
