--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
   <head>
     <title>My Portfolio</title>
@@ -16,7 +11,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="images/cat.jpg"
+      href="images/n-logo.png"
     />
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
@@ -103,14 +98,14 @@
           <div class="inner">
             <a href="todone-main.html" class="image"
               ><img
-                src="images/todone-image/todo-app.png"
+                src="images/todone-image/todone-circle-crop.png"
                 style="border: 5px solid mediumpurple"
                 alt=""
             /></a>
             <div class="content">
               <h2 class="major">ToDone</h2>
               <p>The best todo app on the planet</p>
-              <a href="ToDone-main.html" class="special">Learn more</a>
+              <a href="todone-main.html" class="special">Learn more</a>
             </div>
           </div>
         </section>
@@ -218,14 +213,16 @@
 <!--             <li class="icon solid fa-phone">(000) 000-0000</li> -->
             <li class="icon solid fa-envelope">
               <a href="#">niabwork2@gmail.com</a>
-			</li>
+			      </li>
 
             <li class="icon brands fa-github">
               <a href="https://github.com/niabwork2">niabwork2</a>
             </li>
+
             <li class="icon brands fa-facebook-f">
               <a href="#">facebook.com/untitled-tld</a>
             </li>
+            
             <li class="icon brands fa-instagram">
               <a href="#">instagram.com/untitled-tld</a>
             </li>
