--- a/todone-sub.html
+++ b/todone-sub.html
@@ -11,7 +11,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="images/todone-image/todone-logo.png"
+      href="images/todone-image/todone-logo-white.png"
     />
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
@@ -62,16 +62,17 @@
                 style="width: 100%; height: 100%"
                 alt=""
               /> -->
-              <h3 class="major">SIGNUP AND LOGIN</h3>
+              <!--               <h3 class="major">SIGNUP AND LOGIN</h3>
               <video
                 src="images/mechat-image/mechat-mov-chat.mov"
                 controls
                 style="width: 100%; height: 100%; border-radius: 10px"
               ></video>
-              <br /><br />
-              <h3 class="major">CHAT ROOM</h3>
+              <br /><br /> -->
+
+              <h3 class="major">ADD DELETE SEARCH</h3>
               <video
-                src="images/mechat-image/mechat-mov-login.mov"
+                src="images/todone-image/todone-mov-task.mov"
                 controls
                 style="width: 50%; height: 50%; border-radius: 10px"
               ></video>
