--- a/todone-main.html
+++ b/todone-main.html
@@ -11,7 +11,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="images/todone-image/todone-logo.png"
+      href="images/todone-image/todone-logo-white.png"
     />
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
@@ -58,10 +58,11 @@
 
             <a href="https://www.apple.com/app-store/" class="image">
               <img
-                src="images/mechat-image/mechat-header-black.gif"
+                src="images/todone-image/todone-header.gif"
                 style="width: 100%; height: 100%; border-radius: 30px"
                 alt=""
               />
+              <a href="todone-sub.html" class="special">see video </a>
               <!-- <video
                 src="images/mechat-image/mechat-header-black.mp4"
                 autoplay
@@ -102,31 +103,25 @@
 
             <a class="image"
               ><img
-                src="images/mechat-image/main-screen.png"
+                src="images/todone-image/main-mock.png"
                 style="border-radius: 0%; width: 20rem; height: auto"
             /></a>
 
             <a class="image"
               ><img
-                src="images/mechat-image/login-screen.png"
+                src="images/todone-image/category-mock.png"
                 style="border-radius: 0%; width: 20rem; height: auto"
             /></a>
 
             <a class="image"
               ><img
-                src="images/mechat-image/register-screen.png"
+                src="images/todone-image/food-mock.png"
                 style="border-radius: 0%; width: 20rem; height: auto"
             /></a>
 
             <a class="image"
               ><img
-                src="images/mechat-image/chat-screen-one.png"
-                style="border-radius: 0%; width: 20rem; height: auto"
-            /></a>
-
-            <a class="image"
-              ><img
-                src="images/mechat-image/chat-screen-two.png"
+                src="images/todone-image/drinks-mock.png"
                 style="border-radius: 0%; width: 20rem; height: auto"
             /></a>
 
@@ -141,9 +136,9 @@
             <h4>Tools and Frameworks</h4>
             <ul class="alt">
               <li>
-                Firebase Cloud Firestore <br /><br />
+                CoreData <br /><br />
                 <img
-                  src="images/Cloudstore.png"
+                  src="images/coredata.png"
                   alt=""
                   style="width: 5rem; height: auto"
                 />
@@ -161,9 +156,7 @@
             <section class="features">
               <article>
                 <a href="todone-sub.html" class="image"
-                  ><img
-                    src="images/mechat-image/mechat-download-black.png"
-                    alt=""
+                  ><img src="images/todone-image/todone-download.png" alt=""
                 /></a>
                 <h3 class="major">ToDone in action</h3>
                 <p>
@@ -173,7 +166,7 @@
                 </p>
                 <a href="https://www.apple.com/app-store/" class="nolink"
                   ><img
-                    src="images/download-appstore.png"
+                    src="images/appstore-download.png"
                     style="width: 40%; height: auto"
                 /></a>
 
@@ -182,9 +175,9 @@
               </article>
 
               <article>
-                <a href="https://github.com/niabwork2/MeChat" class="image"
+                <a href="https://github.com/niabwork2/ToDone" class="image"
                   ><img
-                    src="images/mechat-image/mechat-banner.png"
+                    src="images/todone-image/todone-banner.png"
                     alt=""
                     style="background-color: #333333"
                 /></a>
@@ -194,7 +187,7 @@
                   developing quality apps by working together with other
                   developers. Let's create code that benefits the community.
                 </p>
-                <a href="https://github.com/niabwork2/MeChat"
+                <a href="https://github.com/niabwork2/ToDone"
                   ><ol class="icon brands fa-github">
                     <b>&nbsp niabwork2/ToDone</b>
                   </ol></a
