add all AR files

--- a/aroundus-main.html
+++ b/aroundus-main.html
@@ -62,7 +62,7 @@
 
             <a href="https://www.apple.com/app-store/" class="image">
               <img
-                src="images/mechat-image/mechat-header.gif"
+                src="images/aroundus-image/aroundus-header.gif"
                 style="width: 100%; height: 100%; border-radius: 30px"
                 alt=""
               />
@@ -107,31 +107,31 @@
 
             <a class="image"
               ><img
-                src="images/mechat-image/main-mock.png"
+                src="images/aroundus-image/main-mock.png"
                 style="border-radius: 0%; width: 20rem; height: auto"
             /></a>
 
             <a class="image"
               ><img
-                src="images/mechat-image/login-mock.png"
+                src="images/aroundus-image/info1_mock.png"
                 style="border-radius: 0%; width: 20rem; height: auto"
             /></a>
 
             <a class="image"
               ><img
-                src="images/mechat-image/register-mock.png"
+                src="images/aroundus-image/info2_mock.png"
                 style="border-radius: 0%; width: 20rem; height: auto"
             /></a>
 
             <a class="image"
               ><img
-                src="images/mechat-image/chat-one-mock.png"
+                src="images/aroundus-image/info3_mock.png"
                 style="border-radius: 0%; width: 20rem; height: auto"
             /></a>
 
             <a class="image"
               ><img
-                src="images/mechat-image/chat-two-mock.png"
+                src="images/aroundus-image/info4_mock.png"
                 style="border-radius: 0%; width: 20rem; height: auto"
             /></a>
 
@@ -146,9 +146,9 @@
             <h4>Tools and Frameworks</h4>
             <ul class="alt">
               <li>
-                Firebase Cloud Firestore <br /><br />
+                ARKit <br /><br />
                 <img
-                  src="images/cloudstore.png"
+                  src="images/arkit.png"
                   alt=""
                   style="width: 5rem; height: auto"
                 />
@@ -166,7 +166,9 @@
             <section class="features">
               <article>
                 <a href="aroundus-sub.html" class="image"
-                  ><img src="images/mechat-image/mechat-download.png" alt=""
+                  ><img
+                    src="images/aroundus-image/aroundus-download.png"
+                    alt=""
                 /></a>
                 <h3 class="major">ARoundUs in action</h3>
                 <p>
