--- a/mechat-main.html
+++ b/mechat-main.html
@@ -144,7 +144,7 @@
               <li>
                 Firebase Cloud Firestore <br /><br />
                 <img
-                  src="images/cloudstore.png"
+                  src="images/firebase.png"
                   alt=""
                   style="width: 5rem; height: auto"
                 />
