--- a/aroundus-sub.html
+++ b/aroundus-sub.html
@@ -66,16 +66,10 @@
                 style="width: 100%; height: 100%"
                 alt=""
               /> -->
-              <h3 class="major">SIGNUP AND LOGIN</h3>
+
+              <h3 class="major">AR info cards</h3>
               <video
-                src="images/mechat-image/mechat-mov-chat.mov"
-                controls
-                style="width: 100%; height: 100%; border-radius: 10px"
-              ></video>
-              <br /><br />
-              <h3 class="major">CHAT ROOM</h3>
-              <video
-                src="images/mechat-image/mechat-mov-login.mov"
+                src="images/aroundus-image/aroundus-mov-info.MP4"
                 controls
                 style="width: 50%; height: 50%; border-radius: 10px"
               ></video>
