add banner and cirle AR

--- a/aroundus-main.html
+++ b/aroundus-main.html
@@ -187,9 +187,9 @@
               </article>
 
               <article>
-                <a href="https://github.com/niabwork2/MeChat" class="image"
+                <a href="https://github.com/niabwork2/ARoundUs" class="image"
                   ><img
-                    src="images/mechat-image/mechat-banner.png"
+                    src="images/aroundus-image/aroundus-banner.png"
                     alt=""
                     style="background-color: #333333"
                 /></a>
@@ -199,7 +199,7 @@
                   developing quality apps by working together with other
                   developers. Let's create code that benefits the community.
                 </p>
-                <a href="https://github.com/niabwork2/MeChat"
+                <a href="https://github.com/niabwork2/ARoundUs"
                   ><ol class="icon brands fa-github">
                     <b>&nbsp niabwork2/ARoundUs</b>
                   </ol></a
