--- a/aroundus-main.html
+++ b/aroundus-main.html
@@ -148,7 +148,7 @@
               <li>
                 ARKit <br /><br />
                 <img
-                  src="images/arkit.png"
+                  src="images/arkit4.png"
                   alt=""
                   style="width: 5rem; height: auto"
                 />
